<resources>
    <string name="app_name">Ballaba</string>
    <string name="button_next">המשך</string>
    <string name="button_confirm">אישור</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="splash_middle_text">תתחילו לארוז ...</string>
    <string name="pre_auth_screen_middle_text">רגע, בוא נכיר קודם.</string>
    <string name="pre_auth_first_time_btn_text">פעם ראשונה שלי פה</string>
    <string name="pre_auth_has_account_btn_text">יש לי כבר חשבון</string>
    <string name="enter_phone_number_top_question_text">מספר טלפון?</string>
    <string name="enter_phone_number_top_question_answer_text">"מספר הטלפון נועד על מנת לבצע הרשמה
ראשונית ולהנות משלל האפשרויות וההטבות
שיש לנו להציע "</string>
    <string name="enter_phone_number_next_button_text">המשך</string>
    <string name="enter_phone_number_checkbox_text">מאשר/ת את </string>
    <string name="enter_phone_number_checkbox_text_link">התקנון</string>
    <string name="enter_phone_number_snackBar_text">שולח מספר טלפון</string>
    <string name="enter_code_back_button_text"> חזרה </string>
    <string name="enter_code_top_text">אישור קוד</string>
    <string name="enter_code_secondary_top_text">אנא רשמו את הקוד אשר נשלח</string>
    <string name="enter_code_third_top_text">למספר </string>
    <string name="enter_code_error_text_view_text">קוד שגוי</string>
    <string name="enter_code_send_again_text_view_text">לא הגיע? ניתן לשלוח שוב בסיום הדקה</string>
    <string name="enter_code_send_again_button_text">שלח שוב</string>
    <string name="enter_code_send_again_snack_bar_text">שולח קוד</string>
    <string name="mainScreen_searchButton_text">חיפוש</string>
    <string name="mainScreen_buttons_text_relevant">רלוונטיות</string>
    <string name="mainScreen_buttons_text_price">שכ\"ד</string>
    <string name="mainScreen_buttons_text_size">גודל</string>
    <string name="mainScreen_buttons_text_rooms">חדרים</string>
    <string name="mainScreen_buttons_text_attachments">הדירה</string>
    <string name="mainScreen_buttons_text_dateOfEntrance">ת.כניסה</string>
    <string name="propertyItem_numberOfRooms">חדרים</string>
    <string name="propertyItem_propertySize">מ\"ר</string>
    <string name="propertyItem_bathtub">מקלחת</string>
    <string name="propertyItem_toilets">שירותים</string>
    <string name="propertyItem_rootLayout_tag">rootLayout</string>
    <string name="propertyItem_isSavedButton_tag">isSavedButton</string>
    <string name="propertyItem_guaranteeButton_tag">guaranteeButton</string>
    <string name="selectCity_title">מיקום</string>
    <string name="selectCity_autoCompleteTextView_hint">איפה?</string>
    <string name="selectCity_autoCompleteTextView_hint_defaultItem">באזור שלי</string>
    <string name="propertyDescription_root_textView_rentTitle">שכר דירה</string>
    <string name="propertyDescription_root_textView_rentFee">₪ לחודש</string>
    <string name="propertyDescription_root_button_text">המשך</string>
    <string name="propertyDescription_root_attachments_title">הנכס</string>
    <string name="propertyDescription_root_attachmentsExtended_title">על הנכס</string>
    <string name="propertyDescription_root_payments_title">תשלומים שוטפים</string>
    <string name="propertyDescription_root_paymentMethods_title">תשלום</string>
    <string name="propertyDescription_root_comments_title">דברים שרואים משם</string>
    <string name="propertyDescription_root_openDoorDates_title">תיאום פגישה</string>
    <string name="propertyDescription_root_streetView_button">תצוגת רחוב</string>
    <string name="propertyDescription_mainImage_buttonToGallery_text">גלריית תמונות</string>
    <string name="propertyDescriptionPrice_monthly_textView"> לחודש</string>
    <string name="propertyDescriptionPrice_dateOfEntrance_textView">תאריך כניסה</string>
    <string name="propertyDescriptionPrice_rentalPeriod_textView">תקופת השכרה</string>
    <string name="propertyDescriptionPrice_rentalPeriodMonthly_textView">חודשים</string>
    <string name="propertyDescriptionPrice_virtualTour_button">סיור וירטואלי</string>
    <string name="propertyDescriptionPaymentMethods_or_textView">או</string>
    <string name="propertyDescriptionPaymentMethods_date_textView">ב 1 לכל חודש</string>
    <string name="propertyDescriptionPaymentMethods_cheque_textView">צ\'ק</string>
    <string name="propertyDescriptionPaymentMethods_transfer_textView">העברה בנקאית</string>
    <string name="propertyDescriptionComment_positive_title">טוב</string>
    <string name="propertyDescriptionComment_negative_title">פחות טוב</string>
    <string name="attach_parking">חניה</string>
    <string name="attach_furnished">מרוהטת</string>
    <string name="attach_not_furnished">לא מרוהטת</string>
    <string name="attach_electronics">מוצרי חשמל</string>
    <string name="attach_renovated">משופצת</string>
    <string name="attach_sunboiler">דוד שמש</string>
    <string name="attach_elevator">מעלית</string>
    <string name="attach_guard">שומר</string>
    <string name="attach_bars">סורגים</string>
    <string name="attach_warehouse">מחסן</string>
    <string name="attach_sunterrace">מרפסת שמש</string>
    <string name="attach_service_balcony">מרפסת שירות</string>
    <string name="attach_garden">גינה</string>
    <string name="attach_pool">בריכה</string>
    <string name="attach_animals">ללא בע"ח</string>
    <string name="attach_floor_heat">חימום תת רצפתי</string>
    <string name="attach_all_included">הכל כלול</string>
    <string name="attach_gym">חדר כושר</string>
    <string name="attach_disabled_access">גישה חסומה</string>
    <string name="attach_aps">APS</string>
    <string name="income">6000 ש\'\'ח</string>
    <string name="scoring_welcome_title">שאלון חיתום</string>
    <string name="scoring_welcome_description">הסבר למשתמש מה זה חיתום ולמה צריך\n
אותו, מה ייצא לו מלבצע את החיתום                 </string>
    <string name="scoring_welcome_ok_button">המשך לחיתום</string>
    <string name="scoring_welcome_cancel_button">לא, תודה</string>
    <string name="scoring_back">חזרה</string>
    <string name="scoring_personal_title">מידע אישי</string>
    <string name="scoring_work_title">עבודה</string>
    <string name="scoring_dateOfBirth_title">תאריך לידה</string>
    <string name="scoring_status_title">מצב משפחתי</string>
    <string name="scoring_status_single_button">רווק/ה</string>
    <string name="scoring_status_married_button">נשוי/אה</string>
    <string name="scoring_status_divorced_button">גרוש/ה</string>
    <string name="scoring_status_widower_button">אלמן/ה</string>
    <string name="scoring_children_title">ילדים מתחת לגיל 18</string>
    <string name="scoring_children_none_button">אין</string>
    <string name="scoring_children_under18_button">מתחת לגיל 18</string>
    <string name="scoring_children_above18_button">מעל גיל 18</string>
    <string name="scoring_children_under18AndAbove_button">גם וגם</string>
    <string name="scoring_car_title">רכב בבעלותך</string>
    <string name="scoring_car_has_button">יש</string>
    <string name="scoring_car_has_not_button">אין</string>
    <string name="scoring_employmentStatus_title">מצב תעסוקתי</string>
    <string name="scoring_employmentStatus_selfEmployed_button">עצמאי/ת</string>
    <string name="scoring_employmentStatus_employee_button">שכיר/ה</string>
    <string name="scoring_employmentStatus_both_button">גם וגם</string>
    <string name="scoring_employmentStatus_unemployed_button">בין עבודות</string>
    <string name="scoring_seniority_title">וותק בעבודה</string>
    <string name="scoring_seniority_lessThanYear_button">פחות משנה</string>
    <string name="scoring_seniority_moreThanYear_button">יותר משנה</string>
    <string name="scoring_income_title">הכנסה למשפחה</string>
    <string name="scoring_income_moreThan5k_button">כן</string>
    <string name="scoring_income_lessThan5k_button">לא</string>
    <string name="scoring_site_title">אתר אינטרנט של מקום העבודה</string>
    <string name="scoring_site_hint">www.</string>
    <string name="scoring_email_title">דוא״ל של איש קשר</string>
    <string name="scoring_email_hint">example@ballaba-it.com</string>
    <string name="addProperty_continue_title">פתאום נעלמת</string>
    <string name="addProperty_continue_description">זיהינו שלא סיימת תהליך העלאת נכס.\n
באפשרותך להמשיך מאותה נקודה או להתחיל את התהליך
מחדש. ניתן להמשיך את התהליך גם בהמשך.</string>
    <string name="addProperty_continue_button_continue">המשך תהליך</string>
    <string name="addProperty_continue_button_not_now">לא כרגע</string>
    <string name="no_results">לא נמצאו תוצאות</string>
    <string-array name="addProperty_titles">
        <item>פרטים בעל הנכס</item>
        <item>פרטים על הנכס</item>
        <item>תכולה ותוספות</item>
        <item>תשלומים</item>
        <item>העלאת תמונות</item>
        <item>העלאת תמונות</item>
        <item>זמן מוגדר</item>
        <item>צפייה מוקדמת</item>
    </string-array>
    <string name="addProperty_landlord_title">פרטים בעל הנכס</string>
    <string name="addProperty_landlord_uploadImage_title">העלו תמונה שלכם</string>
    <string name="addProperty_landlord_uploadImage_description">רושם ראשוני זה הכל. צרו אמון על ידי העלאת תמונה שלכם.</string>
    <string name="addProperty_landlord_profileImage_title">העלו תמונה שלכם</string>
    <string name="addProperty_landlord_profileImage_description">רושם ראשוני זה הכל. צרו אמון על ידי העלאת תמונה שלכם.</string>
    <string name="addProperty_landlord_firstName">שם פרטי</string>
    <string name="addProperty_landlord_firstName_hint">שם פרטי</string>
    <string name="addProperty_landlord_lastName">שם משפחה</string>
    <string name="addProperty_landlord_lastName_hint">ישראלי</string>
    <string name="addProperty_landlord_id_number">מספר ת.ז</string>
    <string name="addProperty_landlord_id_number_hint">301234567</string>
    <string name="addProperty_landlord_birthDate">תאריך לידה</string>
    <string name="addProperty_landlord_birthDate_hint">02 / 05 / 1986</string>
    <string name="addProperty_landlord_email">דוא\"ל</string>
    <string name="addProperty_landlord_email_hint">israeli@gmail.com</string>
    <string name="addProperty_landlord_phone">מספר טלפון</string>
    <string name="addProperty_landlord_phone_hint">+972 54 123 4567 890</string>
    <string name="addProperty_landlord_city">עיר מגורים</string>
    <string name="addProperty_landlord_city_hint">תל אביב</string>
    <string name="addProperty_asset_propertyPosition_title">היכן ממוקם הנכס?</string>
    <string name="addProperty_asset_city">עיר</string>
    <string name="addProperty_asset_city_hint">תל אביב</string>
    <string name="addProperty_asset_address">כתובת: רחוב, בניין</string>
    <string name="addProperty_asset_address_hint">ביאליק 8</string>
    <string name="addProperty_asset_aptNo">מספר דירה</string>
    <string name="addProperty_asset_hint">1</string>
    <string name="addProperty_asset_floor">קומה</string>
    <string name="addProperty_asset_floor_hint">12</string>
    <string name="addProperty_asset_maxFloor">מתוך</string>
    <string name="addProperty_asset_formation_title">מבנה הנכס</string>
    <string name="addProperty_asset_formation_numberOfRooms">חדרים</string>
    <string name="addProperty_asset_formation_toilets">שירותים</string>
    <string name="addProperty_asset_formation_bathrooms">מקלחת</string>
    <string name="addProperty_asset_formation_size">גודל (מ\"ר)</string>
    <string name="addProperty_asset_formation_size_hint">70</string>
    <string name="addProperty_asset_rentalPeriod_title">תקופת ההשכרה</string>
    <string name="addProperty_asset_rentalLong">למשך</string>
    <string name="addProperty_asset_months">חודשים</string>
    <string name="addProperty_asset_months_hint">12</string>
    <string name="addProperty_asset_option">אופציה להארכת חוזה</string>
</resources>