<?xml version="1.0" encoding="utf-8"?><!-- TODO DO NOT CHANGE TAGS HERE. IT IS SENT TO THE SERVER AS KEYS, AND SERVER WILL NOT RECOGNIZE IF YOU CHANGE IT!! -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/allWrapContent"
    android:scrollIndicators="none"
    android:background="@android:color/transparent"
    android:layoutDirection="rtl">

    <LinearLayout
        android:id="@+id/addProperty_location_root"
        style="@style/allMatchParent"
        android:layout_marginEnd="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/addProperty_location_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@android:color/white"
            android:elevation="@dimen/elevation"
            android:orientation="vertical">

            <TextView
                style="@style/addProperty_titles"
                android:text="@string/addProperty_asset_propertyPosition_title" />

            <TextView
                style="@style/addProperty_textViews"
                android:text="@string/addProperty_asset_city" />


            <AutoCompleteTextView
                android:id="@+id/addProp_city_actv"
                android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                style="@style/addProperty_editTexts"
                android:hint="@string/addProperty_asset_city_hint"
                android:tag="city" />

            <TextView
                style="@style/addProperty_textViews"
                android:text="@string/addProperty_asset_address" />

            <AutoCompleteTextView
                android:id="@+id/addProp_address_actv"
                style="@style/addProperty_editTexts"
                android:hint="@string/addProperty_asset_address_hint"
                android:tag="street" />

            <TextView
                style="@style/addProperty_textViews"
                android:text="@string/addProperty_asset_aptNo" />

            <EditText
                android:id="@+id/addProp_aptNo_editText"
                style="@style/add_property_editTexts_with_number"
                android:layout_width="@dimen/addProperty_editText_short_width"
                android:hint="@string/addProperty_asset_hint"
                android:tag="appartment" />

            <TextView
                style="@style/addProperty_textViews"
                android:layout_width="wrap_content"
                android:text="@string/addProperty_asset_floor" />

            <EditText
                android:id="@+id/addProp_floor_editText"
                style="@style/add_property_editTexts_with_number"
                android:layout_width="@dimen/addProperty_editText_short_width"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:hint="@string/addProperty_asset_floor_hint"
                android:tag="floor" />

            <TextView
                style="@style/addProperty_textViews"
                android:layout_width="wrap_content"
                android:layout_marginStart="@dimen/addProperty_asset_maxFloor_marginStart"
                android:layout_marginTop="@dimen/addProperty_asset_maxFloor_marginVertical"
                android:text="@string/addProperty_asset_maxFloor" />

            <EditText
                android:id="@+id/addProp_maxFloor_editText"
                style="@style/add_property_editTexts_with_number"
                android:layout_width="@dimen/addProperty_editText_short_width"
                android:layout_marginBottom="@dimen/addProperty_asset_maxFloor_marginVertical"
                android:layout_marginStart="@dimen/addProperty_asset_maxFloor_marginStart"
                android:hint="@string/addProperty_asset_floor_hint"
                android:tag="max_floor" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/addProperty_formation_Root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:background="@android:color/white"
            android:elevation="@dimen/elevation"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/addProperty_formation_title_textView"
                style="@style/addProperty_titles"
                android:text="@string/addProperty_asset_formation_title" />

            <TextView
                android:id="@+id/addProperty_formation_rooms_textView"
                style="@style/addProperty_textViews"
                android:layout_width="@dimen/addProperty_editText_short_width"
                android:layout_alignParentStart="true"
                android:layout_below="@id/addProperty_formation_title_textView"
                android:paddingStart="@dimen/small_margin"
                android:text="@string/addProperty_asset_formation_numberOfRooms" />

            <EditText
                android:id="@+id/addProp_rooms_editText"
                style="@style/add_property_editTexts_with_number"
                android:layout_width="@dimen/addProperty_editText_short_width"
                android:layout_alignParentRight="true"
                android:layout_below="@id/addProperty_formation_rooms_textView"
                android:hint="@string/addProperty_asset_hint"
                android:tag="rooms" />

            <TextView
                android:id="@+id/addProperty_formation_toilets_textView"
                style="@style/addProperty_textViews"
                android:layout_width="@dimen/addProperty_editText_short_width"
                android:layout_below="@id/addProperty_formation_title_textView"
                android:layout_toEndOf="@id/addProp_rooms_editText"
                android:text="@string/addProperty_asset_formation_toilets" />

            <EditText
                android:id="@+id/addProp_toilets_editText"
                style="@style/add_property_editTexts_with_number"
                android:layout_width="@dimen/addProperty_editText_short_width"
                android:layout_alignTop="@id/addProp_rooms_editText"
                android:layout_marginEnd="0dp"
                android:layout_marginStart="0dp"
                android:layout_toEndOf="@id/addProp_rooms_editText"
                android:hint="@string/addProperty_asset_hint"
                android:tag="toilets" />

            <TextView
                android:id="@+id/addProperty_formation_bathrooms_textView"
                style="@style/addProperty_textViews"
                android:layout_width="@dimen/addProperty_editText_short_width"
                android:layout_below="@id/addProperty_formation_title_textView"
                android:layout_toEndOf="@id/addProp_toilets_editText"
                android:paddingStart="@dimen/small_margin"
                android:text="@string/addProperty_asset_formation_bathrooms" />

            <EditText
                android:id="@+id/addProp_bathrooms_editText"
                style="@style/add_property_editTexts_with_number"
                android:layout_width="@dimen/addProperty_editText_short_width"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@id/addProp_rooms_editText"
                android:layout_toEndOf="@id/addProp_toilets_editText"
                android:hint="@string/addProperty_asset_hint"
                android:tag="bathrooms" />

            <TextView
                android:id="@+id/addProperty_formation_size_textView"
                style="@style/addProperty_textViews"
                android:layout_alignParentStart="true"
                android:layout_below="@id/addProp_rooms_editText"
                android:paddingStart="@dimen/small_margin"
                android:text="@string/addProperty_asset_formation_size" />

            <EditText
                android:id="@+id/addProp_size_editText"
                style="@style/add_property_editTexts_with_number"
                android:layout_width="@dimen/addProperty_editText_short_width"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/addProperty_formation_size_textView"
                android:hint="@string/addProperty_asset_formation_size_hint"
                android:tag="size" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@android:color/white"
            android:elevation="@dimen/elevation"
            android:orientation="vertical">

            <TextView
                android:id="@+id/addProp_asset_rentalPeriod_title_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/addProperty_asset_rentalPeriod_title"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/textSize_big" />

            <com.example.michaelkibenko.ballaba.Views.MultiLanguagesDatePicker
                android:id="@+id/addProp_asset_rentalPeriod_datePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:layout_marginEnd="@dimen/addProp_asset_rentalPeriod_datePicker"
                android:layout_marginStart="@dimen/addProp_asset_rentalPeriod_datePicker"
                android:tag="entry_date"
                android:theme="@style/MyDatePickerDialogTheme" />

            <!-- <TextView
                 android:id="@+id/wowowow"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="לא גמיש" />-->

            <!--<android.widget.Switch
                android:layout_width="51dp"
                android:layout_height="20dp" />-->

            <TextView
                android:id="@+id/addProperty_rentalPeriod_rentalLong_textView"
                style="@style/addProperty_textViews"
                android:text="@string/addProperty_asset_rentalLong" />

            <EditText
                android:id="@+id/addProperty_rentalPeriod_months_editText"
                style="@style/add_property_editTexts_with_number"
                android:layout_width="@dimen/addProperty_editText_short_width"
                android:hint="@string/addProperty_asset_months_hint"
                android:tag="rent_period" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/addProperty_rentalPeriod_option_textView"
                style="@style/addProperty_textViews"
                android:tag="is_extendable"
                android:text="@string/addProperty_asset_option" />

            <TextView
                android:id="@+id/addProperty_rentalPeriod_months_textView"
                style="@style/addProperty_textViews"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/addProperty_asset_maxFloor_marginStart"
                android:layout_marginTop="@dimen/addProperty_asset_maxFloor_marginVertical"
                android:text="@string/addProperty_asset_months" />

        </LinearLayout>
        <!-- style="@style/AppButtonAnother"-->
        <Button
            android:id="@+id/addProperty_asset_button_next"
            style="@style/AppButtonAnother"
            android:layout_marginBottom="@dimen/button_next_offset"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:text="@string/button_next" />

    </LinearLayout>
</ScrollView>