<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/filter_rootLayout_half_height"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <android.support.constraint.Guideline
        android:id="@+id/mainActivity_filter_guideline_top"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <LinearLayout
        android:id="@+id/mainActivity_filterButtons_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainActivity_filter_guideline_top"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:weightSum="1.25">

        <Button
            android:id="@+id/mainActivity_filter_price_button"
            style="@style/mainActivity_button"
            android:onClick="@{() -> presenter.onClickSortByRelevant()}"
            android:text="@string/mainScreen_buttons_text_price" />
        <Button
            android:id="@+id/mainActivity_filter_rooms_button"
            style="@style/mainActivity_button"
            android:onClick="@{() -> presenter.onClickSortByPrice()}"
            android:text="@string/mainScreen_buttons_text_rooms" />
        <Button
            android:id="@+id/mainActivity_filter_size_button"
            style="@style/mainActivity_button"
            android:onClick="@{() -> presenter.onClickSortBySize()}"
            android:text="@string/mainScreen_buttons_text_size" />
        <Button
            android:id="@+id/mainActivity_filter_attachments_button"
            style="@style/mainActivity_button"
            android:onClick="@{() -> presenter.onClickSortByRooms()}"
            android:text="@string/mainScreen_buttons_text_attachments" />
        <Button
            android:id="@+id/mainActivity_filter_dateOfEntrance_button"
            style="@style/mainActivity_button"
            android:onClick="@{() -> presenter.onClickSortByRooms()}"
            android:text="@string/mainScreen_buttons_text_dateOfEntrance" />

    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/mainActivity_filter_viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/mainActivity_filterButtons_linearLayout"
        app:layout_constraintBottom_toTopOf="@id/mainActivity_filter_v_x_buttons_root"
        />

    <LinearLayout
        android:id="@+id/mainActivity_filter_v_x_buttons_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mainActivity_filter_viewPager"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/colorAccent"
        android:orientation="horizontal"
        android:weightSum="0.5">

        <Button
            android:id="@+id/mainActivity_filter_v_button"
            style="@style/mainActivity_button"
            android:onClick="@{() -> presenter.onClickSortByRooms()}"
            android:background="@android:color/transparent"
            android:src="@drawable/check_white_24" />
        <Button
            android:id="@+id/mainActivity_filter_x_button"
            style="@style/mainActivity_button"
            android:onClick="@{() -> presenter.onClickSortByRooms()}"
            android:background="@android:color/transparent"
            android:src="@drawable/close_white_24" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>